# runpy

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: index.html  renderer.js  style.css
scripts/: install-linux.sh
src-tauri/: Cargo.toml  Entitlements.plist  server.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
