[package]
name = "runpy"
version = "1.0.0"
description = "RunPy — Python Playground Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "runpy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "runpy"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
which = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
